# Конфигурация Poetry для управления проектом и зависимостями.
[tool.poetry]
# Имя пакета в PyPI (должно быть уникальным, использовать тире вместо пробелов).
name = "project1-shilenko-nikolay-m25-555"
# Версия пакета (следует семантическому версионированию (SemVer)).
version = "0.1.0"
# Описание пакета для PyPI и документации.
description = "Тема 7/11: Домашнее задание №1. Текстовая приключенческая игра \"Лабиринт сокровищ\""
# Авторы пакета (имя и email).
authors = ["Nikolay Shilenko <shilenko.nikolay@yandex.ru>"]
# Файл README для отображения на PyPI.
readme = "README.md"
# Указание где находится исходный код пакета.
# Включает папку labyrinth_game в финальный пакет.
packages = [
    { include = "labyrinth_game" },
]

# Зависимости пакета - библиотеки необходимые для работы.
[tool.poetry.dependencies]
python = ">=3.13"

# Консольные скрипты - команды которые станут доступны после установки пакета.
[tool.poetry.scripts]
# Команда 'project' будет вызывать функцию main() из файла labyrinth_game/main.py.
project = "labyrinth_game.main:main" 

# Система сборки пакета.
[build-system]
# Зависимости необходимые для сборки пакета.
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Конфигурация линтера Ruff для проверки качества кода.
[tool.ruff]
# Максимальная длина строки (рекомендация PEP8 - 88 символов).
line-length = 88
# Целевая версия Python для анализа синтаксиса.
target-version = "py311"
# Список файлов и папок которые Ruff должен игнорировать при анализе.
exclude = ["venv", ".venv", "dist", "__pycache__", ".git"]

# Конфигурация правил линтинга Ruff.
[tool.ruff.lint]
# Категории ошибок для проверки:
# E - ошибки формата кода (PEP8);
# F - ошибки Python (например, несуществующие переменные);
# I - сортировка импортов;
# W - предупреждения.
select = ["E", "F", "I", "W"]
# Игнорируемые правила.
# Примечание: Для игнорирования конкретных строк используйте # noqa: E501
# вместо полного отключения правила длины строки.
ignore = []

# Группы зависимостей для разработки.
# Позволяют разделять зависимости на основные и для разработчиков.
[dependency-groups]
# Группа 'dev' содержит инструменты для разработки.
# Эти зависимости НЕ нужны конечным пользователям, только разработчикам.
dev = [
    # Ruff - быстрый линтер для Python.
    # Версия зафиксирована в диапазоне >=0.14.0,<0.15.0 для стабильности.
    # Это гарантирует что все разработчики используют одинаковую версию.
    "ruff (>=0.14.0,<0.15.0)"
]
