[project]
name = "project1-shilenko-nikolay-m25-555"
version = "0.1.0"
description = "Тема 7/11: Домашнее задание №1. Текстовая приключенческая игра \"Лабиринт сокровищ\""
authors = [
    {name = "Nikolay Shilenko", email = "shilenko.nikolay@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.8,<4.0"
dependencies = []

[project.scripts]
project = "labyrinth_game.main:main"

# Добавь эту секцию
[tool.poetry]
packages = [{include = "labyrinth_game"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.14.0,<0.15.0"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__", ".git"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []